# mp-dl

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/backend/: mod.rs  path.rs
src/backend/archive/: mod.rs  tar.rs  zip.rs
src/frontend/: cli.rs  gui.rs  tui.rs
