[package]
name = "mp-dl"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
eframe = "0.34.3"
egui_logger = "0.10.1"
env_logger = "0.11.10"
flate2 = "1.1.9"
log = "0.4.33"
rfd = "0.17.2"
tar = "0.4.46"
xz2 = "0.1.7"
zip = "8.6.0"
zstd = "0.13.3"
